Fix random white space that appeared from nowhere

--- a/main.less
+++ b/main.less
@@ -206,7 +206,6 @@ nav {
     color: @white;
     text-align: center;
     padding: 10% 5%;
-    margin-top: 5%;
 
     .p-mission {
         width: 50%;
